# rust_firebase

./: Cargo.toml  README.md  build.rs  build_universal.sh  cbindgen.toml
src/: build.rs  c_api.rs  ffi.rs  lib.rs
