[package]
name = "fcm-push-listener"
version = "4.0.2"
edition = "2021"
license = "MIT"
description = "Listen for push messages from Firebase Cloud Messaging (FCM)."
repository = "https://github.com/RandomEngy/fcm-push-listener"
keywords = ["push", "fcm"]

# Specify both library and binary targets
[lib]
name = "fcm_push_listener"
crate-type = ["staticlib", "cdylib", "rlib"]

# Закомментируйте, если не нужен demo
# [[bin]]
# name = "demo"
# path = "src/bin/demo.rs"

[features]
default = []
ffi = []

[dependencies]
base64 = "0.22"
bytes = "1.10"
ece = "2.3.1"
log = "0.4"
pin-project-lite = "0.2.16"
prost = "0.13.5"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
serde = "1.0"
serde_with = "3.12"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "net",
] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1"
webpki-roots = "1.0.0"

# UUID dependencies
uuid = { version = "1.15", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

# Force OpenSSL usage, disable vendored to use system OpenSSL
openssl = { version = "0.10", default-features = false }
openssl-sys = { version = "0.9", default-features = false }

[build-dependencies]
prost-build = "0.13.5"
cbindgen = "0.29.0"

# Profile for release builds
[profile.release]
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Single codegen unit for better optimization
opt-level = 3        # Maximum optimization
strip = true         # Strip symbols for smaller binary

# Ensure we're not building OpenSSL
[package.metadata.pkg-config]
openssl = { version = "1.1", statik = false }